<resources>
    <string name="app_name">ShoeStore</string>
    <string name="sign_in">Sign in</string>
    <string name="please_enter_your_mail_id">Please enter your mail id</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="sign_up">sign up</string>
    <string name="welcome">Welcome \n %s </string>
    <string name="message">Welcome to Shoe Store \n Shoes are the most comforfale footwares with variety of brands</string>
    <string name="next">Next</string>
    <string name="instruction">Instructions</string>
    <string name="set_of_instructions"> there is add button where you can add shoe \n
        later you will see list of shoes \n which you have added</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="save">Save</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="mail">Mail</string>
</resources>
